Reformat code, add spotless plugin (#136)